@@ -6,6 +6,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     quilt).
   * Call quilt only once to apply all patches instead of once per patch
     when building 3.0 (quilt) source packages. Closes: #518453
+  * Fix dpkg-shlibdeps so that it works again when analyzing binaries
+    outside of package's directory. Closes: #518687
 
   [ Updated dselect translations ]
   * German (Sven Joachim).
